syntax = "proto3";

package api;
option go_package = "api";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service Service {
	rpc Echo(EchoRequest) returns (EchoResponse) {
		option (google.api.http) = {
			put: "/echo"
			body: "*"
		};
	};
}

message EchoRequest {
	string id = 1;
	bytes body = 2;
}

message EchoResponse {
	string id = 1;
	bytes body = 2;
	google.protobuf.Timestamp server_time = 3;
}